[tool.poetry]
name = "projectteory10-2"
version = "0.1.0"
description = ""
authors = ["Виктор Манаков <manackov.vitek@gmail.com>"]
readme = "README.md"
packages = [{include = "projectteory10"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
